--- a/src/index.css
+++ b/src/index.css
@@ -35,17 +35,35 @@
 .burger {
     @apply text-text-dark hidden p-2 bg-transparent rounded-md;
 }
+.searchBtn{
+    @apply text-text-dark bg-transparent;
+}
 @media screen and (max-width: 665px){
     .burger {
         display: block;
     }
 }
 
+.card:hover .cardAfter{
+    @apply flex;
+}
+
+.mantine-Pagination-control{
+    @apply text-text-dark border-[2px] border-teal-dark;
+}
+.mantine-1e06cqq[data-active]:not([data-disabled]):hover{
+    @apply hover:opacity-80 hover:bg-teal-dark;
+}
+.mantine-Pagination-control[data-active]{
+    @apply bg-teal-dark;
+}
+.mantine-Pagination-dots{
+    @apply text-text-dark;
+}
 
 .singlePageBannerLayer{
     @apply before:absolute before:w-full before:h-full before:bg-transparents-dark
 }
-
 
 .section{
     @apply py-14;
@@ -55,5 +73,5 @@
 *{margin:0;padding:0;box-sizing:border-box;list-style-type:none;text-decoration:none;-webkit-tap-highlight-color: transparent;}
 body {
     font-family: "Inter", sans-serif;
-    @apply bg-gray-light;
+    @apply bg-gray-light scrollbar-thin scrollbar-thumb-text-dark;
 }
